--- a/action.yml
+++ b/action.yml
@@ -30,7 +30,7 @@ runs:
       env:
         FILE: ${{ inputs.file }}
         VALUES: ${{ inputs.values }}
-      run: yampl -i "$FILE" -v "$VALUES"
+      run: yampl --inplace "$FILE" --value="$VALUES"
     - name: Commit changes
       if: inputs.commit_message
       uses: stefanzweifel/git-auto-commit-action@v4
