:wrench: Add renovate comments

--- a/action.yml
+++ b/action.yml
@@ -11,9 +11,11 @@ inputs:
     default: ""
   go_version:
     description: Go version used to install Yampl
+    # renovate datasource=docker depName=golang
     default: "1.19"
   yampl_version:
     description: Yampl version to install
+    # renovate datasource=github-releases depName=clevyr/yampl
     default: "v0.3.6"
 runs:
   using: composite
