--- a/renovate.json
+++ b/renovate.json
@@ -2,8 +2,10 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:base",
-    ":disableRateLimiting"
+    ":disableRateLimiting",
+    ":automergePr"
   ],
+  "platformAutomerge": true,
   "labels": [
     "dependencies",
     "{{datasource}}",
