--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,10 @@ jobs:
           file: |
             test/input.yaml
             test/input2.yaml
+            test/*_input.yaml
           values: |
             hello=world
             tag=latest
       - run: diff test/input.yaml test/expected.yaml
       - run: diff test/input2.yaml test/expected2.yaml
+      - run: diff test/glob_input.yaml test/glob_expected.yaml
