--- a/action.yml
+++ b/action.yml
@@ -33,7 +33,9 @@ runs:
       env:
         FILE: ${{ inputs.file }}
         VALUES: ${{ inputs.values }}
-      run: yampl --inplace --value="$VALUES" $FILE
+      run: |
+        shopt -s globstar
+        yampl --inplace --value="$VALUES" $FILE
     - name: Commit changes
       if: inputs.commit_message
       uses: stefanzweifel/git-auto-commit-action@v4
