feat: Call Yampl with `--recursive` flag

--- a/action.yml
+++ b/action.yml
@@ -31,7 +31,7 @@ runs:
         VALUES: ${{ inputs.values }}
       run: |
         shopt -s globstar 2>/dev/null || true
-        yampl --inplace --value="$VALUES" $FILE
+        yampl --inplace --recursive --value="$VALUES" $FILE
     - name: Commit changes
       if: inputs.commit_message
       uses: stefanzweifel/git-auto-commit-action@v5
