--- a/test/expected.yaml
+++ b/test/expected.yaml
@@ -1,3 +1,3 @@
 hello: world #yampl {{ .hello }}
 image:
-  repository: golang:latest #yampl {{ .Value }}:{{ .tag }}
+  repository: golang:latest #yampl {{ current }}:{{ .tag }}
