--- a/test/input.yaml
+++ b/test/input.yaml
@@ -1,3 +1,3 @@
 hello: "" #yampl {{ .hello }}
 image:
-  repository: golang #yampl {{ .Value }}:{{ .tag }}
+  repository: golang #yampl {{ current }}:{{ .tag }}
